# uzEn_pkg

./: README.md  setup.cfg
src/uzEn_dict.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/uz_en_dictionary/: __init__.py
src/uz_en_dictionary.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/uz_en_dictionary/database/: controller.py
