[metadata]
name = uz_en_dictionary
version = 0.0.1
author = Firdavs
author_email = firdavsmatyoqubov@mail.ru
description = Simple Uzbek-English Dictionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matyokubov/uzEn_pkg
project_urls =
    Bug Tracker = https://github.com/matyokubov/uzEn_pkg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.json